--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -7,7 +7,7 @@
       }
     },
     "home": {
-      "title": "Hello World!"
+      "title": "Dashboard"
     },
     "signIn": {
       "email": {
