--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -38,6 +38,9 @@
         "title":"Авторизація..."
       }
     },
+    "sidebar": {
+      "dashboard": "Дашборд"
+    },
     "signUp": {
       "fullname": {
         "title": "Ім'я та Прізвище",
@@ -81,6 +84,24 @@
       },
       "loader": {
         "title":"Реєстрація..."
+      }
+    },
+    "no-auth": {
+      "message": "Вибачте, ви не авторизовані для доступу до цієї сторінки."
+    },
+    "backHome": "Назад додому",
+    "analytics": {
+      "activity": {
+        "title": "Аналітика активності"
+      },
+      "users": {
+        "title": "Аналітика користувачів"
+      },
+      "traffic": {
+        "title": "Аналітика трафіку"
+      },
+      "newsletter": {
+        "title": "Аналітика пошти"
       }
     }
   }
