--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -204,6 +204,11 @@
       "email": "Електронна пошта",
       "joinDate": "Дата приєднання",
       "lastUpdate": "Останнє оновлення"
+    },
+    "dashboard": {
+      "users": "Кількість користувачів",
+      "groups": "Кількість груп",
+      "regions": "Кількість регіонів"
     }
 
   }
