--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -203,7 +203,9 @@
       "role": "Роль",
       "email": "Електронна пошта",
       "joinDate": "Дата приєднання",
-      "lastUpdate": "Останнє оновлення"
+      "lastUpdate": "Останнє оновлення",
+      "reset": "Скинути пароль",
+      "resetConfirm": "Впевнені, що потрібно скинути пароль?"
     },
     "dashboard": {
       "users": "Кількість користувачів",
