--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -210,7 +210,10 @@
     "dashboard": {
       "users": "Кількість користувачів",
       "groups": "Кількість груп",
-      "regions": "Кількість регіонів"
+      "regions": "Кількість регіонів",
+      "regionsChart": "Користувачі по регіонам",
+      "daysChart": "Користувачі по дням",
+      "deviceChart": "Користувачі по месенджерам"
     }
 
   }
