--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -141,7 +141,11 @@
       "kidsCount": "Кількість дітей",
       "id": "Ідентифікатор",
       "createdAt": "Дата створення",
-      "updatedAt": "Дата оновлення"
+      "updatedAt": "Дата оновлення",
+      "children": "Діти",
+      "name": "Ім'я",
+      "age": "Вік",
+      "preschoolStatus": "Статус дошкільної освіти"
     },
     "days": {
       "monday": "Понеділок",
