--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -101,6 +101,16 @@
     },
     "backHome": "Back home",
     "analytics": {
+      "selectPlaceholder": "Select a group",
+      "region": "Region",
+      "recommendationDay": "RecommendationDay",
+      "conversationState": "Conversation state",
+      "subscribed": "Subscribed",
+      "botType": "Bot Type",
+      "selectMessage": "Please select a group",
+      "emptySelectMessage": "Please select another group",
+      "usersInGroup": "Users in group",
+      "comingSoon": "Coming soon...",
       "activity": {
         "title": "Activity analytics"
       },
