--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -198,6 +198,11 @@
       "monthly": "Щомісячно"
     },
     "save": "Зберегти",
+    "cancel": "Відмінити",
+    "deleteConfirm": "Ви впевнені, що хочете скасувати?",
+    "deleteMessage": "Користувача було видалено!",
+    "cancelConfirm": "Ви впевнені, що хочете видалити?",
+    "inviteAdmin": "Запросити нового адміна",
     "groups": {
       "title": "Групи",
       "name": "Назва",
